@@ -126,7 +126,7 @@ function SWEP:Reload()
 	if CLIENT and not self.FrameVisible then
 		local Frame = vgui.Create("DFrame")
 		self.FrameVisible = true
-		Frame:SetSize(200, 500)
+		Frame:SetSize(200, 360)
 		Frame:Center()
 		Frame:SetVisible(true)
 		Frame:MakePopup()
@@ -143,7 +143,7 @@ function SWEP:Reload()
 			Owndoor:SetPos(10, 30)
 			Owndoor:SetSize(180, 100)
 			Owndoor:SetText("Sell door")
-			Owndoor.DoClick = function() RunConsoleCommand("gm_showspare2") Frame:Close() end
+			Owndoor.DoClick = function() LocalPlayer():ConCommand("say /toggleowndoor") Frame:Close() end
 			
 			local AddOwner = vgui.Create("DButton", Frame)
 			AddOwner:SetPos(10, 140)
@@ -152,37 +152,81 @@ function SWEP:Reload()
 			if not trace.Entity:IsMasterOwner(LocalPlayer()) then
 				AddOwner.m_bDisabled = true
 			end
+				
 			AddOwner.DoClick = function()
-				local menu = vgui.Create("DMenu", Frame)
-				menu:SetPos(10, 110)
+				local menu = DermaMenu()
+				//menu:SetPos(gui.MouseX(), gui.MouseY())
 				for k,v in pairs(player.GetAll()) do
 					if not trace.Entity:OwnedBy(v) and not trace.Entity:AllowedToOwn(v) then
 						menu:AddOption(v:Nick(), function() LocalPlayer():ConCommand("say /addowner " .. tostring(v:UserID())) end)
 					end
-					if menu.Panels == 0 then
-						menu:AddOption("Noone available", function() end)
-					end
 				end
+				if #menu.Panels == 0 then
+					menu:AddOption("Noone available", function() end)
+				end
+				menu:Open()
 			end
 			
-			//more
-		elseif not trace.Entity:OwnedBy(LocalPlayer()) and trace.Entity:IsOwnable() and not trace.Entity:IsOwned() then
-			Frame:SetSize(200, 150)
+			local RemoveOwner = vgui.Create("DButton", Frame)
+			RemoveOwner:SetPos(10, 250)
+			RemoveOwner:SetSize(180, 100)
+			RemoveOwner:SetText("Remove owner")
+			if not trace.Entity:IsMasterOwner(LocalPlayer()) then
+				RemoveOwner.m_bDisabled = true
+			end
+				
+			RemoveOwner.DoClick = function()
+				local menu = DermaMenu()
+				//menu:SetPos(gui.MouseX(), gui.MouseY())
+				for k,v in pairs(player.GetAll()) do
+					if (trace.Entity:OwnedBy(v) and not trace.Entity:IsMasterOwner(v)) or trace.Entity:AllowedToOwn(v) then
+						menu:AddOption(v:Nick(), function() LocalPlayer():ConCommand("say /ro " .. tostring(v:UserID())) end)
+					end
+				end
+				if #menu.Panels == 0 then
+					menu:AddOption("Noone available", function() end)
+				end
+				menu:Open()
+			end
+		elseif not trace.Entity:OwnedBy(LocalPlayer()) and trace.Entity:IsOwnable() and not trace.Entity:IsOwned() and not trace.Entity:GetNWBool("nonOwnable") then
+			Frame:SetSize(200, 140)
 			local Owndoor = vgui.Create("DButton", Frame)
 			Owndoor:SetPos(10, 30)
 			Owndoor:SetSize(180, 100)
 			Owndoor:SetText("Buy door")
-			Owndoor.DoClick = function() RunConsoleCommand("gm_showspare2") Frame:Close() end
+			Owndoor.DoClick = function() LocalPlayer():ConCommand("say /toggleowndoor") Frame:Close() end
+			if LocalPlayer():IsSuperAdmin() then
+				Frame:SetSize(200, 250)
+				local DisableOwnage = vgui.Create("DButton", Frame)
+				DisableOwnage:SetPos(10, 140)
+				DisableOwnage:SetSize(180, 100)
+				DisableOwnage:SetText("Disallow ownership")
+				DisableOwnage.DoClick = function() Frame:Close() LocalPlayer():ConCommand("say /toggleownable") end
+			end
 		elseif not trace.Entity:OwnedBy(LocalPlayer()) and trace.Entity:AllowedToOwn(LocalPlayer()) then
 			Frame:SetSize(200, 150)
 			local Owndoor = vgui.Create("DButton", Frame)
 			Owndoor:SetPos(10, 30)
 			Owndoor:SetSize(180, 100)
 			Owndoor:SetText("Co-own door")
-			Owndoor.DoClick = function() RunConsoleCommand("gm_showspare2") Frame:Close() end
+			Owndoor.DoClick = function() LocalPlayer():ConCommand("say /toggleowndoor") Frame:Close() end
+		elseif LocalPlayer():IsSuperAdmin() and trace.Entity:GetNWBool("nonOwnable") then
+			Frame:SetSize(200, 140)
+			local EnableOwnage = vgui.Create("DButton", Frame)
+			EnableOwnage:SetPos(10, 30)
+			EnableOwnage:SetSize(180, 100)
+			EnableOwnage:SetText("Allow ownership")
+			EnableOwnage.DoClick = function() Frame:Close() LocalPlayer():ConCommand("say /toggleownable") end
+		elseif LocalPlayer():IsSuperAdmin() and not trace.Entity:OwnedBy(LocalPlayer()) and trace.Entity:IsOwned() and not trace.Entity:AllowedToOwn(LocalPlayer()) then
+			Frame:SetSize(200, 140)
+			local DisableOwnage = vgui.Create("DButton", Frame)
+			DisableOwnage:SetPos(10, 30)
+			DisableOwnage:SetSize(180, 100)
+			DisableOwnage:SetText("Disallow ownership")
+			DisableOwnage.DoClick = function() Frame:Close() LocalPlayer():ConCommand("say /toggleownable") end
 		else
 			Frame:Close()
-			LocalPlayer():ChatPrint("Door cannot be owned") 
+			//LocalPlayer():ChatPrint("Door cannot be owned") 
 		end
 
 	end
