@@ -45,7 +45,89 @@ function meta:IsMasterOwner(ply)
 
 	return false
 end
+if SERVER then
+	local time = false
+	local function SetDoorOwnable(ply)
+		if time then return "" end
+		time = true
+		timer.Simple(0.1, function()  time = false end)
+		local trace = ply:GetEyeTrace()
+		if not ValidEntity(trace.Entity) then return "" end
+		local ent = trace.Entity
+		if ply:IsSuperAdmin() and ent:IsDoor() and ply:GetPos():Distance(ent:GetPos()) < 115 then
+			ent:SetNWBool("nonOwnable", not ent:GetNWBool("nonOwnable"))
+			-- Save it for future map loads
+			DB.StoreDoorOwnability(ent)
+		end
+		return ""
+	end
+	AddChatCommand("/toggleownable", SetDoorOwnable)
+	
+	local time2 = false
+	local function OwnDoor(ply)
+		if time2 then return "" end
+		time2 = true
+		timer.Simple(0.1, function()  time2 = false end)
+		
+		local trace = ply:GetEyeTrace()
 
+		if ValidEntity(trace.Entity) and trace.Entity:IsOwnable() and ply:GetPos():Distance(trace.Entity:GetPos()) < 115 then
+			if RPArrestedPlayers[ply:SteamID()] then
+				Notify(ply, 1, 5, "Can not own or unown things while arrested!")
+				return ""
+			end
+
+			if trace.Entity:GetNWBool("nonOwnable") then
+				Notify(ply, 1, 5, "This Door can not be owned or unowned!")
+				return ""
+			end
+
+			if trace.Entity:OwnedBy(ply) then
+				Notify(ply, 1, 4, "Sold for " .. CUR .. math.floor(((CfgVars["doorcost"] * 0.66666666666666)+0.5)) .. "!")
+				trace.Entity:Fire("unlock", "", 0)
+				trace.Entity:UnOwn(ply)
+				ply:GetTable().Ownedz[trace.Entity:EntIndex()] = nil
+				ply:GetTable().OwnedNumz = ply:GetTable().OwnedNumz - 1
+				ply:AddMoney(math.floor(((CfgVars["doorcost"] * 0.66666666666666)+0.5)))
+			else
+				if trace.Entity:IsOwned() and not trace.Entity:AllowedToOwn(ply) then
+					Notify(ply, 1, 4, "Already owned!")
+					return ""
+				end
+				if trace.Entity:GetClass() == "prop_vehicle_jeep" or trace.Entity:GetClass() == "prop_vehicle_airboat" then
+					if not ply:CanAfford(CfgVars["vehiclecost"]) then
+						Notify(ply, 1, 4, "You can not afford this vehicle!")
+						return ""
+					end
+				else
+					if not ply:CanAfford(CfgVars["doorcost"]) then
+						Notify(ply, 1, 4, "You can not afford this door!")
+						return ""
+					end
+				end
+
+				if trace.Entity:GetClass() == "prop_vehicle_jeep" or trace.Entity:GetClass() == "prop_vehicle_airboat" then
+					ply:AddMoney(-CfgVars["vehiclecost"])
+					Notify(ply, 1, 4, "You've bought this vehicle for " .. CUR .. math.floor(CfgVars["vehiclecost"]) .. "!")
+				else
+					ply:AddMoney(-CfgVars["doorcost"])
+					Notify(ply, 1, 4, "You've bought this door for " .. CUR .. math.floor(CfgVars["doorcost"]) .. "!")
+				end
+				trace.Entity:Own(ply)
+
+				if ply:GetTable().OwnedNumz == 0 then
+					timer.Create(ply:SteamID() .. "propertytax", 270, 0, ply.DoPropertyTax, ply)
+				end
+
+				ply:GetTable().OwnedNumz = ply:GetTable().OwnedNumz + 1
+
+				ply:GetTable().Ownedz[trace.Entity:EntIndex()] = trace.Entity
+			end
+			return ""
+		end
+	end
+	AddChatCommand("/toggleowndoor", OwnDoor)
+end
 function meta:OwnedBy(ply)
 	if self:GetNWInt("Ownerz") == ply:EntIndex() then return true end
 
